feat(config): unify LLM key resolution with profile validation

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 # ALEX SSE Service Configuration
 # Copy this file to .env and fill in your actual values
 
-# Minimal required key for real LLM responses
-OPENAI_API_KEY=
+# Minimal required key for real LLM responses (unified fallback)
+LLM_API_KEY=
+
+# Optional provider-specific keys (higher priority than LLM_API_KEY)
+# OPENAI_API_KEY=
+# ANTHROPIC_API_KEY=
+# CODEX_API_KEY=
 
 # LLM API secrets (referenced via config.yaml)
 # TAVILY_API_KEY=your-tavily-key
