--- a/examples/config/runtime-test-config.yaml
+++ b/examples/config/runtime-test-config.yaml
@@ -2,10 +2,11 @@
 # This file mirrors runtime-config.yaml but binds server port to 8081
 # to avoid collision with the main server default (8080).
 runtime:
+  profile: "standard"
   llm_provider: "openai"
   llm_model: "gpt-4o-mini"
   llm_vision_model: "gpt-4o-mini"
-  api_key: "${OPENAI_API_KEY}"
+  api_key: "${LLM_API_KEY}"
   base_url: "https://api.openai.com/v1"
   sandbox_base_url: "http://localhost:18086"
   tool_preset: "safe"
