--- a/evaluation/agent_eval/datasets/foundation_eval_cases_tool_coverage.yaml
+++ b/evaluation/agent_eval/datasets/foundation_eval_cases_tool_coverage.yaml
@@ -1,6 +1,6 @@
 version: '1'
 name: foundation-tool-coverage
-description: Core tool capability coverage for offline intent routing
+description: Core tool capability coverage for currently available tools
 scenarios:
 - id: tool-plan-migration-phases
   category: planning
@@ -18,43 +18,17 @@ scenarios:
   intent: Continue only after the user completes manual account verification.
   expected_tools:
   - request_user
-- id: tool-browser-dom-form-fill
-  category: browser
-  intent: Use selectors to fill the login form and click submit on the active page.
-  expected_tools:
-  - browser_dom
 - id: tool-browser-action-canvas-click
   category: browser
   intent: This canvas has no stable selectors; use coordinate-based click and drag
     actions.
   expected_tools:
   - browser_action
-- id: tool-browser-info-session
-  category: browser
-  intent: Inspect current browser tab URL, title, and viewport state before testing.
-  expected_tools:
-  - browser_info
-- id: tool-browser-screenshot-proof
-  category: browser
-  intent: Capture a screenshot of the current page as visual debugging evidence.
-  expected_tools:
-  - browser_screenshot
 - id: tool-read-source-file
   category: workspace
   intent: Open a source file and inspect its content around a suspicious function.
   expected_tools:
   - read_file
-- id: tool-list-workspace-directory-ambiguous-scope
-  category: workspace
-  intent: Before touching anything, quickly inventory candidate paths under service
-    and infra roots, including nested dirs, but do not open file contents yet.
-  expected_tools:
-  - list_dir
-- id: tool-search-symbol-occurrences
-  category: workspace
-  intent: Search symbol occurrences across project files using a pattern.
-  expected_tools:
-  - search_file
 - id: tool-replace-deprecated-string
   category: workspace
   intent: Replace deprecated endpoint strings in one file with the new API path.
@@ -81,31 +55,3 @@ scenarios:
     discover which official pages should be cited.
   expected_tools:
   - web_search
-- id: tool-web-fetch-single-source-grounding
-  category: web
-  intent: We already chose one source URL; pull only that page body for grounded wording
-    checks and avoid broad search.
-  expected_tools:
-  - web_fetch
-- id: tool-html-edit-transform
-  category: web
-  intent: Edit an HTML snippet according to transformation instructions and validate
-    output.
-  expected_tools:
-  - html_edit
-- id: tool-render-mermaid
-  category: visualization
-  intent: Render this Mermaid graph into an image artifact.
-  expected_tools:
-  - diagram_render
-- id: tool-artifacts-write-report-with-delivery-constraint
-  category: artifact
-  intent: Response must stay concise in-chat, but full technical deep-dive must be
-    delivered as a reusable file artifact for downstream review.
-  expected_tools:
-  - artifacts_write
-- id: tool-artifacts-list-run
-  category: artifact
-  intent: List artifacts generated in this run before selecting one to send.
-  expected_tools:
-  - artifacts_list
