feat(eval): add active-tools systematic hard suite and guards

--- a/evaluation/agent_eval/datasets/foundation_eval_suite_active_tools_systematic_hard.yaml
+++ b/evaluation/agent_eval/datasets/foundation_eval_suite_active_tools_systematic_hard.yaml
@@ -1,11 +1,11 @@
 version: "1"
-name: "foundation-basic-active-suite"
-description: "Expanded baseline suite for currently available tools and skills only."
+name: "foundation-active-tools-systematic-hard-suite"
+description: "Systematic hard suite constrained to current active default toolset; no unavailable-tool dependencies."
 collections:
   - id: "tool-coverage-active"
     name: "Tool Coverage Active"
     dimension: "tool_coverage_active"
-    description: "Core active tool capability coverage."
+    description: "Core active tool coverage sanity baseline."
     cases_path: "evaluation/agent_eval/datasets/foundation_eval_cases_tool_coverage.yaml"
     mode: "web"
     preset: "full"
@@ -15,7 +15,7 @@ collections:
   - id: "prompt-effectiveness-active"
     name: "Prompt Effectiveness Active"
     dimension: "prompt_effectiveness_active"
-    description: "Prompt effectiveness coverage for active tools."
+    description: "Implicit prompt effectiveness on active tool surface."
     cases_path: "evaluation/agent_eval/datasets/foundation_eval_cases_prompt_effectiveness.yaml"
     mode: "web"
     preset: "full"
@@ -25,7 +25,7 @@ collections:
   - id: "proactivity-active"
     name: "Proactivity Active"
     dimension: "proactivity_active"
-    description: "Proactivity coverage focused on active tools and skills."
+    description: "Proactivity and first-step quality under active tools."
     cases_path: "evaluation/agent_eval/datasets/foundation_eval_cases_proactivity.yaml"
     mode: "web"
     preset: "full"
@@ -55,7 +55,7 @@ collections:
   - id: "capability-active-delivery-and-artifact-write-hard"
     name: "Capability Active Delivery And Artifact Write Hard"
     dimension: "capability_active_delivery_and_artifact_write_hard"
-    description: "Hard delivery quality and durable output contracts."
+    description: "Hard delivery quality and durable output contract checks."
     cases_path: "evaluation/agent_eval/datasets/foundation_eval_cases_capability_active_delivery_and_artifact_write_hard.yaml"
     mode: "web"
     preset: "full"
