--- a/docs/plans/2026-02-10-autonomy-context-rules.yaml
+++ b/docs/plans/2026-02-10-autonomy-context-rules.yaml
@@ -1,9 +1,9 @@
 id: "plan-2026-02-10-autonomy-context-rules"
 title: "Expand Autonomy and Environment Injection Rules in Context"
-status: "in_progress"
+status: "completed"
 owner: "codex"
 created_at: "2026-02-10T21:15:00Z"
-updated_at: "2026-02-10T21:28:00Z"
+updated_at: "2026-02-10T21:58:00Z"
 context:
   goals:
     - "Increase autonomous/exploratory execution guidance in system prompt context."
@@ -26,7 +26,7 @@ steps:
     status: "completed"
   - id: "validate-review-commit"
     title: "Run tests/lint, execute mandatory code review, then commit and merge"
-    status: "in_progress"
+    status: "completed"
 artifacts:
   prompt_logic:
     - "internal/app/context/manager_prompt.go"
