--- a/docs/plans/2026-02-11-lark-small-vs-big-proactivity.yaml
+++ b/docs/plans/2026-02-11-lark-small-vs-big-proactivity.yaml
@@ -1,9 +1,9 @@
 id: "plan-2026-02-11-lark-small-vs-big-proactivity"
 title: "Lark 小事直做 vs 大事确认：端到端评测与修复"
-status: "in_progress"
+status: "completed"
 owner: "codex"
 created_at: "2026-02-11T13:45:00Z"
-updated_at: "2026-02-11T14:00:00Z"
+updated_at: "2026-02-11T14:10:00Z"
 context:
   goals:
     - "复现并量化“用户已授权但仍反复确认”的主动性问题。"
@@ -27,7 +27,7 @@ steps:
     status: "completed"
   - id: "review-commit-merge"
     title: "完成强制代码审查、增量提交、合并 main、清理 worktree"
-    status: "in_progress"
+    status: "completed"
 artifacts:
   target_suite: "evaluation/agent_eval/datasets/foundation_eval_suite_motivation_aware.yaml"
   regression_case_hint: "delegated-low-risk-action-no-reconfirm"
