--- a/docs/plans/2026-02-12-phase1-concurrency-hardening-web-lark.yaml
+++ b/docs/plans/2026-02-12-phase1-concurrency-hardening-web-lark.yaml
@@ -20,6 +20,7 @@ scope:
     - internal/delivery/server/app/server_coordinator.go
     - internal/delivery/server/bootstrap/config.go
     - internal/shared/config/file_config.go
+    - docs/reference/CONFIG.md
     - docs/reviews/2026-02-11-web-lark-architecture-concurrency-review.md
   out:
     - SSE 跨实例事件总线
@@ -40,6 +41,9 @@ progress:
   - "2026-02-12 11:47: 初始化计划文件，开始实现"
   - "2026-02-12 11:56: 完成 nil-container 风险修复（LLMFactoryProbe nil-safe + debug bootstrap guard）并补健康端点回归测试"
   - "2026-02-12 12:07: 完成 lease/claim 基础层（domain/store + server ports + adapter + postgres/inmemory）并新增 claim 集成测试"
+  - "2026-02-12 12:22: 完成 TaskExecutionService claim/admission/lease 生命周期接入（create + resume）并补执行层回归测试"
+  - "2026-02-12 12:25: 完成 coordinator/bootstrap/config 接线，新增 server.task_execution_* YAML 配置与解析测试"
+  - "2026-02-12 12:27: 更新配置参考与架构评审文档的事实漂移说明"
 checklist:
   - id: p1
     item: 修复 nil container 健康探针风险并补测试
@@ -49,10 +53,10 @@ checklist:
     status: completed
   - id: p3
     item: TaskExecutionService 接入 claim/renew/release（create + resume）
-    status: in_progress
+    status: completed
   - id: p4
     item: 增加全局 task admission semaphore 与配置项
-    status: pending
+    status: completed
   - id: p5
     item: 修正文档入口事实、跑全量校验、代码审查、增量提交
-    status: pending
+    status: in_progress
